# rhdh-rag-content

./: .dockerignore  .gitignore  Containerfile  Containerfile.local  Containerfile.minimal_test  Containerfile.rhdh_lightspeed  Containerfile.vs  Makefile  OWNERS  README.md  __init__.py  ci-versions.json  license_header.txt  pyproject.toml  renovate.json  rpms.in.yaml  rpms.lock.yaml  versions.json
.ci/: test_image_content.sh
.github/workflows/: build-and-push.yml  gen-vector-store.yml  pr-tests.yml
examples/: Containerfile.rhdh_lightspeed
scripts/: convert_adoc_to_txt_rhdh.py  extract-vector-db.sh  generate_embeddings_rhdh.py  get_rhdh_plaintext_docs.sh  inspect_vector_db.py  mirror-release-notes.sh  open-vector-store-pr.sh  prepare-vector-store.sh  query_rag.py  resolve-base-image.sh  resolve-rag-assets-release.sh
tests/: test_document_processor.py  test_metadata_processor.py  test_utils.py
tests/asciidoc/: test__main__.py  test_asciidoc_converter.py
