[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rhdh-rag-content"
description = "RAG for RHDH"
version = "0.3.0"
dependencies = [
    "lightspeed-rag-content @ git+https://github.com/lightspeed-core/rag-content@ecbe0ca780968658f062266c9ce190b72fe6fa09",
    "pyyaml",
]

authors = [
    {name = "Maysun J Faisal"},
    {name = "Jordan Dubrick"},
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache"}
