[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rhdh-rag-content"
description = "RAG for RHDH"
version = "0.3.0"
dependencies = [
    "lightspeed-rag-content @ git+https://github.com/lightspeed-core/rag-content@96558d239cf818119cb32add544011c9b4ffb64a",
    "pyyaml",
]

authors = [
    {name = "Maysun J Faisal"},
    {name = "Jordan Dubrick"},
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache"}
